TEST: attempt to fix home layout shift on scroll

--- a/src/global.css
+++ b/src/global.css
@@ -79,7 +79,7 @@
 
     .dh-screen {
         height: 100vh;
-        max-height: 100%;
+        height: 100dvh;
     }
 
     /* --- scrollbar style --- */
